encapp: Fixes for visualization and non vis use cases
Both input showing and without input showing should work fine.
Framerate counter to make sure a stabkle frame rate is reqched before
camera tests.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Encapp</string>
+    <string name="test_is_running">Test is running...</string>
 </resources>
